# RecStore

./: .clang-format  .gitignore  .gitmodules  .gitmodules-back  CMakeLists.txt  README.md  init_docker.sh  prepare_env.sh  recstore_config.json  recstore_config_generator.py  rsync.sh  run.sh
src/: CMakeLists.txt
src/base/: CMakeLists.txt  array.h  base.h  cuda.h  json.h  lf_list.h  lock.h  math.h  pq.h  pybind_timer.cc  tensor.h  timer.h
src/base_ps/: base_client.h
src/benchmark/: parse_dataset.h
src/executable/: debug.py  perf_emb.py  test_emb.py  test_log
src/executable/dlrm/: perf_rec_model.py  rec_dataloader.py
src/executable/kg/: dgl-ke-main.py
src/executable/uvm/: CMakeLists.txt  uvm_libtorch.cu  uvm_microbench.cu
src/framework/: op.cc  op.h
src/framework/frugal/: CMakeLists.txt
src/framework/pytorch/: op_torch.cc
src/framework/pytorch/python_client/: client.py  client_test.py
src/framework_adapters/torch/: CMakeLists.txt  DistEmb.py  DistOpt.py  DistTensor.py  EmbeddingServer.cu  IPCTensor.cc  IPCTensor.h  IPC_barrier.h  PsKvstore.py  abs_emb.py  cache.cu  cache_common.py  cache_emb_factory.py  cached_embedding.py  config.json  cu_utils.cuh  gpu_cache_nohash.cu  gpu_cache_nohash.h  grad_async_v1.h  grad_async_v2.h  grad_base.h  kg_controller.cc  kg_controller.h  kg_controller_test.cc  kill.sh  load_data.py  local_cache.py  merge.cu  new_cached_emb.py  parallel_pq.h  parallel_pq_v2.h  perf_emb.py  pytest.ini  recstore.cc  recstore.cu  recstore.py  recstore_gpu_cache.h  run.sh  sharded_cache.py  test.py  (+9 more)
src/framework_adapters/torch/benchmark/backlog/exp0-bigmodel-3090/run_1/: log
src/framework_adapters/torch/benchmark/backlog/exp0-bigmodel-3090/run_2/: config
src/framework_adapters/torch/benchmark/backlog/exp0-bigmodel-3090/run_3/: config
src/framework_adapters/torch/kg/: dgl-ke.patch  init_docker.sh  patch.sh
src/framework_adapters/torch/kg/python/: analysis.ipynb  main.py
src/framework_adapters/torch/kg/scripts/: bench.py  bench_base.py  bench_util.py  exp_config.py
src/framework_adapters/torch/kg/scritps/: bench.py  bench_base.py  exp_config.py  variables.py
src/framework_adapters/torch/protos/: IPCGPUMemoryHandle.proto
src/framework_adapters/torch/python/: analysis.ipynb  controller_process.py  dgl-ke-main.py  fordebug.csv  perf_emb.py  perf_rec_model.py  test_IPCGPUTensor.py  test_emb.py  test_log  test_utils.py  trace.json
src/framework_adapters/torch/python/res/: motivation.csv
src/framework_adapters/torch/python/res/kg_scale/: result.csv
src/framework_adapters/torch/python/res/micro_bench/: whole.csv
src/framework_adapters/torch/scripts/: bench.py  bench_base.py  bench_util.py  clean_unsuccess_log.py  exp_config.py  test_mc.py  variables.py
src/gpu_memory/gdrcopy/src/: libgdrapi.so.2
src/grpc_ps/: CMakeLists.txt  base_ps_server.h  cache_ps_impl.h  grpc_ps_client.cpp  grpc_ps_client.h  grpc_ps_client_pytorch.cpp  grpc_ps_client_test.cpp  grpc_ps_config.json  grpc_ps_config_generator.py  grpc_ps_server.cpp  grpc_ps_server_async.cpp  parameters.h
src/grpc_ps/python_client/: client.py  client2.py  load_client.py  python_client_test.py
src/kg/: CMakeLists.txt  IPCTensor.cc  IPCTensor.h  IPC_barrier.h  grad_async_v1.h  grad_async_v2 copy.h  grad_async_v2.h  grad_base.h  parallel_pq_v2.h  recstore.cc
src/kg/kg/: init_docker.sh  install_dgl.sh
src/kg/kg/dgl-ke/python/dglke/: train_pytorch.py
src/kg/scripts/: bench.py  bench_base.py  exp_config.py
src/memory/: epoch_manager.h  persist_malloc.h
src/perf_uva/: analyze.ipynb
src/perf_uva/log/run_0/: config  log
src/perf_uva/log/run_1/: config  log
src/perf_uva/log/run_2/: config  log
src/perf_uva/log/run_3/: config  log
src/perf_uva/log/run_4/: config  log
src/perf_uva/log/run_5/: config  log
src/perf_uva/log/run_6/: config  log
src/perf_uva/log/run_7/: config  log
src/perf_uva/log/run_8/: config  log
src/perf_uva/log/run_9/: config  log
src/ps/: CMakeLists.txt  base_ps_server.cc  cache_ps_impl.h  grpc_ps_client.cpp  grpc_ps_client.h  grpc_ps_client_python.cpp  grpc_ps_client_test.cpp  grpc_ps_server.cpp  grpc_ps_server_async.cpp  parameters.cpp  parameters.h  ps_client.cpp  ps_client.h  ps_client_test.cpp  ps_server.cpp
src/ps/proto/: CMakeLists.txt  ps.proto
src/ps/python_client/: PsKvstore.py  dataset.py  init_server.py  loadGenerator.py  load_client.py  multi_client.py  python_client_test.py  test_be.py
src/ps/python_client/config/: config3.json
src/ps_common/: CMakeLists.txt  shard_manager.h
src/python/pytorch/recstore/: DistTensor.py  __init__.py  torch_op.py
src/python/recstore/: DistEmb.py  DistOpt.py  DistTensor.py  PsKvstore.py  __init__.py  controller_process.py  utils.py
src/python/recstore/cache/: __init__.py  cache_emb_factory.py  local_cache.py
src/rdma_ps/: CMakeLists.txt  petps_client.cc  petps_server.cc
src/small_tests/: CMakeLists.txt  test_h2d_bandwidth.cu  test_uva_h2d.cu
src/storage/: CMakeLists.txt
src/storage/dram/: CMakeLists.txt  extendible_hash.cpp  extendible_hash.h  hash.h  hash_interface.h  pair.h  persist.h  timer.h
src/storage/gpu_cache/: CMakeLists.txt  nv_gpu_cache.cu  nv_util.h
src/storage/gpu_ssd/: BaMWrapper.cu  BaMWrapper.h  CMakeLists.txt  RawGDWrapper.cu  RawGDWrapper.h  interface.h  perf_BaM.cu  perf_RawGD.cu  test_BaM.cu  test_RawGD.cu
src/storage/hybrid/: index.h  pointer.h  value.h
src/storage/kv_engine/: CMakeLists.txt  base_kv.h  benchmark_kv_engine.cc  engine_cceh.h  engine_double_desk.h  engine_extendable_hash.h  engine_hybridkv.h  engine_map.h  kv_engine_register.cc  load_db.h
src/storage/ssd/: CCEH.cpp  CCEH.h  CMakeLists.txt  file.h  hash.h  naiveKVell.h  pair.h  perf_spdk.cc  perf_spdkkvell_from_gpu.cu  spdk_wrapper.cc  spdk_wrapper.h  test_naiveKvell.cc  test_spdk_wrapper.cc  util.h
src/test/: CMakeLists.txt  test_CCEH.cpp  test_cceh.cpp  test_engine_cceh.cpp  test_engine_extendible_hash.cpp  test_extendible_hash.cpp  test_hash_map.cpp  test_hybridkv.cpp  test_index.cpp  test_value.cpp
(+12416 files in other folders)
