add_subdirectory(base)

add_subdirectory(ps_common)
add_subdirectory(ps)
add_subdirectory(rdma_ps)

add_subdirectory(memory)
add_subdirectory(storage)

add_subdirectory(kg)
add_subdirectory(test)

add_subdirectory(small_tests)

add_subdirectory(perf_uva)


add_subdirectory(framework)

add_subdirectory(executable/uvm)